fix look and feel of main page on mobile devices (#88)

--- a/application/frontend/src/app.scss
+++ b/application/frontend/src/app.scss
@@ -1,6 +1,7 @@
 .app {
   height: 100vh;
-  width: 100vw;
+  width: 96vw;
+  margin:auto;
 }
 
 .pagination-container {
